--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -434,21 +434,9 @@
                         <div class="test">
                             <marquee direction="up" onmouseover="this.stop();" onmouseout="this.start(); " scrollamount="3">
                                 <p> <b>
-                                 <br> <a href="#">
-                            1   .&nbsp;Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</a>
-                                     <br>
-                                 <br>
-                                     <a href="#">
-                            2   .&nbsp;It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </a>
-                                     <br>
-                                 <br>
-                                     <a href="#">
-                            3   .&nbsp;Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words</a>
-                                     <br>
-                                 <br>
-                                 <a href="#">
-                            4  .&nbsp;There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</a>
-                                     <br>
+                                 <br> <a href="#">WELCOME TO THE OFFICIAL WEBSITE OF SPE IIT ISM STUDENT CHAPTER!</a><br><br>
+                                 <br> <a href="#">We SPE IIT ISM Student Chapter give our heartiest welcome to the Freshers.
+                                    With this we announce our Inductions for SPE and FIFI for batch 2020 is going to be held very soon.</a><br><br>
                                     </b></p>
                             </marquee>
                             <br>
