--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -503,7 +503,7 @@
                     <div class="count-clients ">
                         <div class="single-counter ">
                             <div class="count-number">
-                                <span class="counter">1000</span>
+                                <span class="counter">1000 +</span>
                             </div>
                             <div class="count-text ">
                                 <p>Number of Lives</p>
@@ -516,7 +516,7 @@
                     <div class="count-clients ">
                         <div class="single-counter ">
                             <div class="count-number ">
-                                <span class="counter">500</span>
+                                <span class="counter">15</span>
                             </div>
                             <div class="count-text ">
                                 <p>Professional Collaborations</p>
