--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -401,7 +401,7 @@
 <!-- Hero Header -->
 <div class="page-header" data-parallax="true" style="background-image: url(/media/bg-images/premium4.jpeg); height: 570px;">
     <div class="container" style="text-align:center; overflow: hidden;">
-        <p class="text"> <span class="text__first"><span class="text__word" style="font-size: 4rem;">WELCOME TO</span><span class="text__first-bg"></span></span><br/><span class="text__second"><span class="text__word">SPE IIT(ISM) STUDENT CHAPTER</span>
+        <p class="text"> <span class="text__first"><span class="text__word" style="font-size: 4rem;">WELCOME TO</span><span class="text__first-bg"></span></span><br/><span class="text__second"><span class="text__word">SPE IIT (ISM) STUDENT CHAPTER</span>
             <span class="text__second-bg"></span>
             </span>
         </p>
@@ -417,7 +417,7 @@
             <div class="col-lg-5 col-sm-12" style="padding:4% 1%;">
                 <p style="font-size: 4rem; font-weight: 700; text-align: center;">WHO WE ARE</p>
                 <p style="line-height: 2.0; font-size: 2.0rem;font-weight:500;">
-                    Since 1984, SPE IIT(ISM) STUDENT CHAPTER has kept expanding itself to from its being. Taking the oath to help the students, the institute and the society in general, it has been paving an incredible path. From being, one of its kind in the country to
+                    Since 1984, SPE IIT (ISM) STUDENT CHAPTER has kept expanding itself to from its being. Taking the oath to help the students, the institute and the society in general, it has been paving an incredible path. From being, one of its kind in the country to
                     be the OUTSTANDING STUDENT CHAPTER (2010 & 2015) globally, it has not only brought laurels to the institute but also the country at the global level.
                 </p>
                 <div class="container" style=" padding-top: 50px;
@@ -519,8 +519,8 @@
                                 <span class="counter">15</span>
                             </div>
                             <div class="count-text ">
-                                <p>Professional Collaborations</p>
-                                <h5>COMPANIES</h5>
+                                <p>Professional</p>
+                                <h5>Collaborations</h5>
                             </div>
                         </div>
                     </div>
@@ -529,7 +529,7 @@
                     <div class="count-clients ">
                         <div class="single-counter ">
                             <div class="count-number ">
-                                <span class="counter">1800</span>
+                                <span class="counter">6700</span>
                             </div>
                             <div class="count-text ">
                                 <p>Social Media Reach</p>
@@ -580,7 +580,7 @@
     <!-- Sponsors section -->
     <div class="container" style="overflow: hidden !important; padding: 0% 2%;" data-aos="fade-up" data-aos-duration="1500">
         <div style="font-family: 'Dosis', sans-serif; color:#323d47; text-align:center;overflow: hidden !important;">
-            <p style="font-size:4.4rem; font-weight: 700;">COLLABORATIONS</p>
+            <p style="font-size:4.4rem; font-weight: 700;">COMPANIES</p>
         </div>
         <div class="row" id="mainwrapper" style="padding:2% 0%">
             <div class="col-lg-4 col-md-4 col-sm-12">
@@ -608,6 +608,11 @@
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <div id="box-1" class="box" style="left: 50px;">
                     <a href="https://www.slb.com/"><img id="image-1" src="https://alanweiss.com/wp-content/uploads/2019/07/schlumberger.jpg" style="object-fit: contain; overflow: hidden !important; width: 100%; max-height: 100%;"></a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div id="box-1" class="box" style="left: 50px;">
+                    <a href="https://www.kockw.com/sites/EN/Pages/Default.aspx"><img id="image-1" src="https://www.kockw.com/sites/EN/Style%20Library/KOCKW_EN_Images/Koclogo.jpg" style="top:45px; object-fit: contain; overflow: hidden !important; width: 100%; max-height: 100%;"></a>
                 </div>
             </div>
         </div>
