--- a/SPE-website/pages/templates/pages/contact-us.html
+++ b/SPE-website/pages/templates/pages/contact-us.html
@@ -25,17 +25,17 @@
 
             <!-- Address -->
             <p class="contact-info"><i class="fas fa-map-marker-alt"></i>
-                Department of Petroleum Engineering, IIT (ISM) Dhanbad (695.89 km) 826004 Dhanbad, Jharkhand, India</p>
+                Department of Petroleum Engineering, IIT (ISM) Dhanbad, Hirapur, Sardar Patel Nagar, Dhanbad, Jharkhand 826004</p>
             <br>
             <!-- Address -->
 
             <!-- Contact Number -->
-            <p class="contact-info"><i class="fas fa-phone"></i> Phone: 087098 43266</p>
+            <p class="contact-info"><i class="fas fa-phone"></i> Phone:+91 087098 43266</p>
             <br>
             <!-- Contact Number -->
 
             <!-- Email -->
-            <p class="contact-info"><i class="fas fa-envelope"></i> Email: Speiitism@gmail.com</p>
+            <p class="contact-info"><i class="fas fa-envelope"></i> Email: speiitism@gmail.com</p>
             <!-- Email -->
 
             <!-- Query Form-->
@@ -55,7 +55,7 @@
                     <!-- Sign Up Button -->
                     <div class="form-group">
                         <button type="submit" id="SignUpBtn" class="btn btn-outline-primary waves-effect"
-                        style="margin-top: 0px; align-self: center;">submit</button>
+                        style="margin-top: 0px; align-self: center;">Submit</button>
                     </div>
                     <!-- Sign Up Button -->
 
