--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -612,7 +612,7 @@
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <div id="box-1" class="box" style="left: 50px;">
-                    <a href="https://www.kockw.com/sites/EN/Pages/Default.aspx"><img id="image-1" src="https://www.kockw.com/sites/EN/Style%20Library/KOCKW_EN_Images/Koclogo.jpg" style="top:45px; object-fit: contain; overflow: hidden !important; width: 100%; max-height: 100%;"></a>
+                    <a href="https://www.kockw.com/sites/EN/Pages/Default.aspx"><img id="image-1" src="https://upload.wikimedia.org/wikipedia/commons/3/3d/KOC_Logo_for_wikipedia.png" style="top:45px; object-fit: contain; overflow: hidden !important; width: 100%; max-height: 100%;"></a>
                 </div>
             </div>
         </div>
