changes done in footer

--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -143,9 +143,9 @@
                     </div>
                     <div class="col-md-4 offset-md-1 footer-contact">
                         <h3>Contact</h3>
-                        <p><i class="fas fa-map-marker-alt"></i> Department of Petroleum Engineering, IIT (ISM) Dhanbad (695.89 km) 826004 Dhanbad, Jharkhand, India</p>
-                        <p><i class="fas fa-phone"></i> Phone: 087098 43266</p>
-                        <p><i class="fas fa-envelope"></i> Email: <a href="#">Speiitism@gmail.com</a></p>
+                        <p><i class="fas fa-map-marker-alt"></i> Department of Petroleum Engineering, IIT (ISM) Dhanbad, Hirapur, Sardar Patel Nagar, Dhanbad, Jharkhand 826004</p>
+                        <p><i class="fas fa-phone"></i> Phone:+91 087098 43266</p>
+                        <p><i class="fas fa-envelope"></i> Email: <a href="#">speiitism@gmail.com</a></p>
                     </div>
                     <div class="col-md-3 offset-md-1 footer-links">
                         <div class="row">
@@ -156,10 +156,10 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <p><a class="imp-link" href="https://www.spe.org/en/">SPE International</a></p>
+                                <p><a class="imp-link" href="https://connect.spe.org/">SPE Connect</a></p>
+                                <p><a class="imp-link" href="https://www.fipi.org.in/">FIPI</a></p>
                                 <p><a class="imp-link" href="https://www.iitism.ac.in/">IIT ISM Official Website</a></p>
                                 <p><a class="imp-link" href="https://parent.iitism.ac.in/index.php/parent_portal/portal0">Parents Portal</a></p>
-                                <p><a class="imp-link" href="https://www.fipi.org.in/">FIPI</a></p>
-                                <p><a class="imp-link" href="https://connect.spe.org/">SPE Connect</a></p>
                             </div>
                         </div>
                     </div>
@@ -170,7 +170,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 footer-copyright">
-                        Copyright © 2020 All rights reserved | SPE IIT(ISM) Student Chapter
+                        Copyright © 2020 All rights reserved | SPE IIT (ISM) Student Chapter
                     </div>
                     <div class="col-md-6 footer-social">
                         <p style="display: inline;">Follow us on : </p>
