--- a/SPE-website/pages/templates/pages/about.html
+++ b/SPE-website/pages/templates/pages/about.html
@@ -202,7 +202,7 @@
 
 <div class="container" style="overflow: hidden !important; padding: 5% 0%;" data-aos="fade-up" data-aos-duration="1500">
     <div style="font-family: 'Dosis', sans-serif; color:#323d47; text-align:center;overflow: hidden !important;">
-        <p style="font-size:5rem; font-weight: 700;">NOTABLE ALUMINIS</p>
+        <p style="font-size:5rem; font-weight: 700;">NOTABLE ALUMNI</p>
         <br>
         <!-- <p style="font-size:3.0rem;">DR. AJAY MANDAL</p> -->
         <p style="color: #757575; font-size: 2.2rem;">IIT(ISM) Dhanbad has a strong alumni base with our alumni carving a niche for themselves in every field. We have a lasting legacy of making a remarkable contribution to the industries associated with Earth resources and energy. IIT (ISM) rising
