changes done(images to be changed)

--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -111,7 +111,7 @@
                         </div>
                         <div class="flip-card-back flip-border"
                              style="background-image: url(/static/pages/office-bearers/sankdip-sir-blur.jpg);">
-                          <h1 class="card-title" style="color: black;">Shankhadeep Biswas</h1>
+                          <h1 class="card-title" style="color: black;">Sankhadip Biswas</h1>
                           <hr class="underline" style="background-color: black;">
                           <p class="card-content" style="color: white;">Vice President</p>
                           <a href="https://www.facebook.com/sankhadipbiswas03"><i class="fa fa-facebook"></i></a>
