--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -401,7 +401,7 @@
 <!-- Hero Header -->
 <div class="page-header" data-parallax="true" style="background-image: url(/media/bg-images/premium4.jpeg); height: 570px;">
     <div class="container" style="text-align:center; overflow: hidden;">
-        <p class="text"> <span class="text__first"><span class="text__word" style="font-size: 4rem;">WELCOME TO</span><span class="text__first-bg"></span></span><br/><span class="text__second"><span class="text__word">SPE IIT (ISM) STUDENT CHAPTER</span>
+        <p class="text"> <span class="text__first"><span class="text__word" style="font-size: 4rem;">WELCOME TO</span><span class="text__first-bg"></span></span><br/><span class="text__second"><span class="text__word">SPE IIT (ISM) DHANBAD STUDENT CHAPTER</span>
             <span class="text__second-bg"></span>
             </span>
         </p>
@@ -580,7 +580,7 @@
     <!-- Sponsors section -->
     <div class="container" style="overflow: hidden !important; padding: 0% 2%;" data-aos="fade-up" data-aos-duration="1500">
         <div style="font-family: 'Dosis', sans-serif; color:#323d47; text-align:center;overflow: hidden !important;">
-            <p style="font-size:4.4rem; font-weight: 700;">COMPANIES</p>
+            <p style="font-size:4.4rem; font-weight: 700;">PROFESSIONAL COLLABORATIONS</p>
         </div>
         <div class="row" id="mainwrapper" style="padding:2% 0%">
             <div class="col-lg-4 col-md-4 col-sm-12">
@@ -612,7 +612,7 @@
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <div id="box-1" class="box" style="left: 50px;">
-                    <a href="https://www.kockw.com/sites/EN/Pages/Default.aspx"><img id="image-1" src="https://upload.wikimedia.org/wikipedia/commons/3/3d/KOC_Logo_for_wikipedia.png" style="top:45px; object-fit: contain; overflow: hidden !important; width: 100%; max-height: 100%;"></a>
+                    <a href="https://www.kockw.com/sites/EN/Pages/Default.aspx"><img id="image-1" src="https://upload.wikimedia.org/wikipedia/commons/3/3d/KOC_Logo_for_wikipedia.png" style="object-fit: contain; overflow: hidden !important; width: 100%; max-height: 100%;"></a>
                 </div>
             </div>
         </div>
