--- a/SPE-website/pages/static/pages/gallery-css/common.css
+++ b/SPE-website/pages/static/pages/gallery-css/common.css
@@ -1,49 +1,63 @@
 /*GLOBALS*/
-*{margin:0; padding:0; list-style:none;}
-a{text-decoration:none;	color:#666;}
-a:hover{color:#1bc1a3;}
-body, hmtl{background: #ecf0f1; font-family: 'Oxygen';}
 
-
-.wrapper{
-	width:1000px;
-	margin:50px auto;
-	height:550px;
-	position:relative;
-	color:#fff;
-	text-shadow:rgba(0,0,0,0.1) 2px 2px 0px;
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
+
+a {
+    text-decoration: none;
+    color: #666;
+}
+
+a:hover {
+    color: #1bc1a3;
+}
+
+body,
+hmtl {
+    background: #ecf0f1;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.wrapper {
+    width: 1000px;
+    margin: 50px auto;
+    height: 550px;
+    position: relative;
+    color: #fff;
+    text-shadow: rgba(0, 0, 0, 0.1) 2px 2px 0px;
+}
+
 
 /*btns*/
-.btns{
-	position:absolute;
-	width:50px;
-	height:60px;
-	top:50%;
-	margin-top:-25px;
-	line-height:57px;
-	text-align:center;
-	cursor:pointer;
-	background:rgba(0,0,0,0.1);
-	z-index:100;
 
-
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-khtml-user-select: none;
-	-ms-user-select: none;
-
-	-webkit-transition: all 0.1s ease;
-	-moz-transition: all 0.1s ease;
-	-o-transition: all 0.1s ease;
-	-ms-transition: all 0.1s ease;
-	transition: all 0.1s ease;
+.btns {
+    position: absolute;
+    width: 50px;
+    height: 60px;
+    top: 50%;
+    margin-top: -25px;
+    line-height: 57px;
+    text-align: center;
+    cursor: pointer;
+    background: rgba(0, 0, 0, 0.1);
+    z-index: 100;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -ms-user-select: none;
+    -webkit-transition: all 0.1s ease;
+    -moz-transition: all 0.1s ease;
+    -o-transition: all 0.1s ease;
+    -ms-transition: all 0.1s ease;
+    transition: all 0.1s ease;
 }
 
-.btns:hover{
-	background:rgba(0,0,0,0.3);
+.btns:hover {
+    background: rgba(0, 0, 0, 0.3);
 }
-
 
 .gal-img {
     width: 1000px;
@@ -66,8 +80,8 @@ body, hmtl{background: #ecf0f1; font-family: 'Oxygen';}
 }
 
 .grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto;
+    display: grid;
+    grid-template-columns: auto auto auto;
 }
 
 .stat-img {
@@ -75,4 +89,3 @@ body, hmtl{background: #ecf0f1; font-family: 'Oxygen';}
     height: 250px;
     margin-bottom: 40px;
 }
-
