--- a/SPE-website/pages/static/pages/gallery1.css
+++ b/SPE-website/pages/static/pages/gallery1.css
@@ -1,165 +1,205 @@
 /*GLOBALS*/
-*{margin:0; padding:0; list-style:none;}
-a{text-decoration:none;	color:#666;}
-a:hover{color:#1bc1a3;}
-body, hmtl{background: #ecf0f1; font-family: 'Oxygen';}
 
-
-.wrapper{
-	width:1000px;
-	margin:50px auto;
-	height:550px;
-	position:relative;
-	color:#fff;
-	text-shadow:rgba(0,0,0,0.1) 2px 2px 0px;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600;1,700;1,800&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
-#slider-wrap1{
-	width:1000px;
-	height:550px;
-	position:relative;
-	overflow:hidden;
+a {
+    text-decoration: none;
+    color: #666;
 }
 
-#slider-wrap1 ul#slider1{
-	width:100%;
-	height:100%;
-
-	position:absolute;
-	top:0;
-	left:0;
+a:hover {
+    color: #1bc1a3;
 }
 
-#slider-wrap1 ul#slider1 li{
-	float:left;
-	position:relative;
-	width:1000px;
-	height:550px;
+body,
+hmtl {
+    background: #ecf0f1;
+    font-family: 'Open Sans', sans-serif !important;
 }
 
-#slider-wrap1 ul#slider1 li > div{
-	position:absolute;
-	top:20px;
-	left:35px;
+.wrapper {
+    width: 1000px;
+    margin: 50px auto;
+    height: 550px;
+    position: relative;
+    color: #fff;
+    text-shadow: rgba(0, 0, 0, 0.1) 2px 2px 0px;
 }
 
-#slider-wrap1 ul#slider1 li > div h3{
-	font-size:36px;
-	text-transform:uppercase;
+#slider-wrap1 {
+    width: 1000px;
+    height: 550px;
+    position: relative;
+    overflow: hidden;
 }
 
-#slider-wrap1 ul#slider1 li > div span{
-	font-family: Neucha, Arial, sans serif;
-	font-size:21px;
+#slider-wrap1 ul#slider1 {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
-#slider-wrap1 ul#slider1 li i{
-	text-align:center;
-	line-height:400px;
-	display:block;
-	width:100%;
-	font-size:90px;
+#slider-wrap1 ul#slider1 li {
+    float: left;
+    position: relative;
+    width: 1000px;
+    height: 550px;
+}
+
+#slider-wrap1 ul#slider1 li>div {
+    position: absolute;
+    top: 20px;
+    left: 35px;
+}
+
+#slider-wrap1 ul#slider1 li>div h3 {
+    font-size: 36px;
+    text-transform: uppercase;
+}
+
+#slider-wrap1 ul#slider1 li>div span {
+    font-family: Neucha, Arial, sans serif;
+    font-size: 21px;
+}
+
+#slider-wrap1 ul#slider1 li i {
+    text-align: center;
+    line-height: 400px;
+    display: block;
+    width: 100%;
+    font-size: 90px;
 }
 
 
 /*btns*/
-.btns{
-	position:absolute;
-	width:50px;
-	height:60px;
-	top:50%;
-	margin-top:-25px;
-	line-height:57px;
-	text-align:center;
-	cursor:pointer;
-	background:rgba(0,0,0,0.1);
-	z-index:100;
 
-
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-khtml-user-select: none;
-	-ms-user-select: none;
-
-	-webkit-transition: all 0.1s ease;
-	-moz-transition: all 0.1s ease;
-	-o-transition: all 0.1s ease;
-	-ms-transition: all 0.1s ease;
-	transition: all 0.1s ease;
+.btns {
+    position: absolute;
+    width: 50px;
+    height: 60px;
+    top: 50%;
+    margin-top: -25px;
+    line-height: 57px;
+    text-align: center;
+    cursor: pointer;
+    background: rgba(0, 0, 0, 0.1);
+    z-index: 100;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -ms-user-select: none;
+    -webkit-transition: all 0.1s ease;
+    -moz-transition: all 0.1s ease;
+    -o-transition: all 0.1s ease;
+    -ms-transition: all 0.1s ease;
+    transition: all 0.1s ease;
 }
 
-.btns:hover{
-	background:rgba(0,0,0,0.3);
+.btns:hover {
+    background: rgba(0, 0, 0, 0.3);
 }
 
-#next1{right:-50px; border-radius:7px 0px 0px 7px;}
-#previous1{left:-50px; border-radius:0px 7px 7px 7px;}
-#counter1{
-	top: 30px;
-	right:35px;
-	width:auto;
-	position:absolute;
+#next1 {
+    right: -50px;
+    border-radius: 7px 0px 0px 7px;
 }
 
-#slider-wrap1.active #next1{right:0px;}
-#slider-wrap1.active #previous1{left:0px;}
+#previous1 {
+    left: -50px;
+    border-radius: 0px 7px 7px 7px;
+}
+
+#counter1 {
+    top: 30px;
+    right: 35px;
+    width: auto;
+    position: absolute;
+}
+
+#slider-wrap1.active #next1 {
+    right: 0px;
+}
+
+#slider-wrap1.active #previous1 {
+    left: 0px;
+}
 
 
 /*bar*/
-#pagination-wrap1{
-	min-width:20px;
-	margin-top:500px;
-	margin-left: auto;
-	margin-right: auto;
-	height:15px;
-	position:relative;
-	text-align:center;
+
+#pagination-wrap1 {
+    min-width: 20px;
+    margin-top: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 15px;
+    position: relative;
+    text-align: center;
 }
 
 #pagination-wrap1 ul {
-	width:100%;
+    width: 100%;
 }
 
-#pagination-wrap1 ul li{
-	margin: 0 4px;
-	display: inline-block;
-	width:5px;
-	height:5px;
-	border-radius:50%;
-	background:#fff;
-	opacity:0.5;
-	position:relative;
-  top:0;
-
-
+#pagination-wrap1 ul li {
+    margin: 0 4px;
+    display: inline-block;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background: #fff;
+    opacity: 0.5;
+    position: relative;
+    top: 0;
 }
 
-#pagination-wrap1 ul li.active{
-  width:12px;
-  height:12px;
-  top:3px;
-	opacity:1;
-	box-shadow:rgba(0,0,0,0.1) 1px 1px 0px;
+#pagination-wrap1 ul li.active {
+    width: 12px;
+    height: 12px;
+    top: 3px;
+    opacity: 1;
+    box-shadow: rgba(0, 0, 0, 0.1) 1px 1px 0px;
 }
-
-
 
 
 /*Header*/
-h1, h2{text-shadow:none; text-align:center;}
-h1{	color: #666; text-transform:uppercase;	font-size:36px;}
-h2{ color: #7f8c8d; font-family: Neucha, Arial, sans serif; font-size:18px; margin-bottom:30px;}
 
+h1,
+h2 {
+    text-shadow: none;
+    text-align: center;
+}
 
+h1 {
+    color: #666;
+    text-transform: uppercase;
+    font-size: 36px;
+}
+
+h2 {
+    color: #7f8c8d;
+    font-family: Neucha, Arial, sans serif;
+    font-size: 18px;
+    margin-bottom: 30px;
+}
 
 
 /*ANIMATION*/
-#slider-wrap1 ul, #pagination-wrap1 ul li{
-	-webkit-transition: all 0.3s cubic-bezier(1,.01,.32,1);
-	-moz-transition: all 0.3s cubic-bezier(1,.01,.32,1);
-	-o-transition: all 0.3s cubic-bezier(1,.01,.32,1);
-	-ms-transition: all 0.3s cubic-bezier(1,.01,.32,1);
-	transition: all 0.3s cubic-bezier(1,.01,.32,1);
+
+#slider-wrap1 ul,
+#pagination-wrap1 ul li {
+    -webkit-transition: all 0.3s cubic-bezier(1, .01, .32, 1);
+    -moz-transition: all 0.3s cubic-bezier(1, .01, .32, 1);
+    -o-transition: all 0.3s cubic-bezier(1, .01, .32, 1);
+    -ms-transition: all 0.3s cubic-bezier(1, .01, .32, 1);
+    transition: all 0.3s cubic-bezier(1, .01, .32, 1);
 }
 
 .gal-img {
