--- a/SPE-website/pages/static/pages/navbar.css
+++ b/SPE-website/pages/static/pages/navbar.css
@@ -157,7 +157,7 @@ body {
         background-color: rgba(0, 0, 0, .9);
     }
     .navbar.fixed-top .navbar-nav {
-        background: transparent;
+        background: black;
     }
 }
 
