--- a/SPE-website/pages/templates/pages/about.html
+++ b/SPE-website/pages/templates/pages/about.html
@@ -46,7 +46,7 @@
             <img src="https://img.freepik.com/vecteurs-libre/hommes-affaires-travaillant-discutant-problemes-tableaux-donnees_1262-19726.jpg?size=626&ext=jpg&ga=GA1.2.1246410860.1598659200" style="width: 100%; height: 500px; object-fit: cover;">
         </div>
         <div class="col-md-6 col-sm-12" data-aos="fade-left" data-aos-duration="1500">
-            <p style="color: black; padding: 10% 0; font-size: 2.0rem; line-height: 2.0;">The chapter is devoted to fulfilling the mission of SPE international "To collect, disseminate, and exchange technical knowledge concerning the exploration, development and production of oil and gas resources, and related technologies for
+            <p style="color: black; padding: 10% 0; font-size: 2.0rem; line-height: 2.0;">The chapter is devoted to fulfilling the mission of SPE international- "To collect, disseminate, and exchange technical knowledge concerning the exploration, development and production of oil and gas resources, and related technologies for
                 the public benefit; and to provide opportunities for professionals and students to enhance their technical and professional competence.”</p>
         </div>
     </div>
@@ -67,35 +67,6 @@
 
         <section class="timeline" style="overflow: hidden;">
             <div class="container">
-
-                <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
-
-                    <div class="timeline-img"></div>
-
-                    <div class="timeline-content timeline-card js--fadeInRight">
-                        <div class="timeline-img-header">
-                            <h2>Best Student Chapter Award</h2>
-                        </div>
-                        <div class="date">Year 2016</div>
-                        <p>Petrotech IIT (ISM) student chapter won the Best Student Chapter Award 2016. Became the first runner up for Best Presentation Award at 7th annual convention of Petrotech chapters at MIT Pune.</p>
-                    </div>
-
-                </div>
-
-                <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
-
-                    <div class="timeline-img"></div>
-
-                    <div class="timeline-content timeline-card js--fadeInRight">
-                        <div class="timeline-img-header">
-                            <h2>Gold Standard Award and Outstanding Student Chapter Award</h2>
-                        </div>
-                        <div class="date">Year 2016, 2015, 2013, 2012, 2011, 2010</div>
-                        <p>SPE IIT (ISM) student chapter won the Gold Standard Award in 2016, 2013, 2012, 2011 and Outstanding Student Chapter Award 2015 and 2010. Hosted the SPE South Asia Regional Meet of 2016.</p>
-                    </div>
-
-                </div>
-
 
                 <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
 
@@ -125,6 +96,24 @@
 
                 </div>
 
+
+                <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content timeline-card js--fadeInRight">
+                        <div class="timeline-img-header">
+                            <h2>BRICS Youth Energy Outlook</h2>
+                        </div>
+                        <div class="date">Year 2020</div>
+                        <p>Prithvi Chauhan, Debosmit Banerjee, Shubham Agarwal, Aman Kumar and Suyash Vatsa were the Champions of the BRICS Youth Energy Outlook 2020 reflecting on the need of the youth workforce to collaborate actively to produce positive
+                            social change.
+                        </p>
+                    </div>
+
+                </div>
+
+
                 <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
 
                     <div class="timeline-img"></div>
@@ -138,7 +127,7 @@
                     </div>
 
                 </div>
-                <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
+                <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
 
                     <div class="timeline-img"></div>
 
@@ -152,20 +141,34 @@
                     </div>
 
                 </div>
+
                 <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
 
                     <div class="timeline-img"></div>
 
                     <div class="timeline-content timeline-card js--fadeInRight">
                         <div class="timeline-img-header">
-                            <h2>BRICS Youth Energy Outlook</h2>
+                            <h2>IMTR Award</h2>
                         </div>
-                        <div class="date">Year 2020</div>
-                        <p>Prithvi Chauhan, Debosmit Banerjee, Shubham Agarwal, Aman Kumar and Suyash Vatsa were the Champions of the BRICS Youth Energy Outlook 2020 reflecting on the need of the youth workforce to collaborate actively to produce positive
-                            social change.</p>
+                        <div class="date">Year 2017, 2016</div>
+                        <p>Sunil Kumar and Nilanjan Pal won the IMTR Award in 2016 and 2017, respectively.</p>
+                    </div>
+                </div>
+
+                <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
+
+                    <div class="timeline-img"></div>
+
+                    <div class="timeline-content timeline-card js--fadeInRight">
+                        <div class="timeline-img-header">
+                            <h2>Best Student Chapter Award</h2>
+                        </div>
+                        <div class="date">Year 2016</div>
+                        <p>Petrotech IIT (ISM) student chapter won the Best Student Chapter Award 2016. Became the first runner up for Best Presentation Award at 7th annual convention of Petrotech chapters at MIT Pune.</p>
                     </div>
 
                 </div>
+
                 <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
 
                     <div class="timeline-img"></div>
@@ -177,21 +180,22 @@
                         <div class="date">Year 2016</div>
                         <p>A delegation of 5 students represented IIT(ISM) at SPE/IADC Middle East Drilling Technology Conference and Exhibition held at Abu Dhabi in 2016.</p>
                     </div>
-
                 </div>
-                <div class="timeline-item" data-aos="flip-right" data-aos-duration="1500">
+
+                <div class="timeline-item" data-aos="flip-left" data-aos-duration="1500">
 
                     <div class="timeline-img"></div>
 
                     <div class="timeline-content timeline-card js--fadeInRight">
                         <div class="timeline-img-header">
-                            <h2>IMTR Award</h2>
+                            <h2>Gold Standard Award and Outstanding Student Chapter Award</h2>
                         </div>
-                        <div class="date">Year 2016, 2017</div>
-                        <p>Sunil Kumar and Nilanjan Pal won the IMTR Award in 2016 and 2017, respectively.</p>
+                        <div class="date">Year 2016, 2015, 2013, 2012, 2011, 2010</div>
+                        <p>SPE IIT (ISM) student chapter won the Gold Standard Award in 2016, 2013, 2012, 2011 and Outstanding Student Chapter Award 2015 and 2010. Hosted the SPE South Asia Regional Meet of 2016.</p>
                     </div>
 
                 </div>
+
             </div>
         </section>
     </div>
