image issue solved

--- a/SPE-website/blog/templates/blog/post_detail.html
+++ b/SPE-website/blog/templates/blog/post_detail.html
@@ -33,7 +33,7 @@
                     <!-- Post author and Date -->
 
                     <!-- Post Image -->
-                    <img id="PostImage" src ="{{ object.image.url }}">
+                    <img id="PostImage" src ="{{ object.img_url }}">
                     <!-- Post Image -->
 
                     <!-- Post Content -->
