--- a/SPE-website/events/templates/events/events_detail.html
+++ b/SPE-website/events/templates/events/events_detail.html
@@ -23,8 +23,8 @@
                     <hr id="PostUnderline" class="d-flex justify-content-center" style="width: 330px;">
 
                     <!-- Event Poster -->
-                    {% if object.image %}
-                        <img id="PostImage" src ="{{ object.image.url }}">
+                    {% if object.img_url %}
+                        <img id="PostImage" src ="{{ object.img_url }}">
                     {% endif %}
                     <!-- Event Poster -->
 
