--- a/SPE-website/events/templates/events/home.html
+++ b/SPE-website/events/templates/events/home.html
@@ -46,7 +46,7 @@
         <div id="PostBody" style="margin: 10px 30px 50px 10px; overflow:hidden !important;" class="media content-section col-md-9 mx-auto">
 
             <div class="media-body">
-                <img id="PostImage" src="{{ event.image.url }}">
+                <img id="PostImage" src="{{ event.img_url }}">
                 <h1 id="ArticleTitle"><a href="{% url 'events-detail' event.id %}" style="color: black;">{{ event.title }}</a></h1>
                 <div id="ArticleMetaData">
                     <hr id="Underline" align="left">
