--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -32,7 +32,7 @@
 
         <!-- Team Image-->
         <div class="d-block mx-auto">
-            <h1 class="d-flex justify-content-center" id="PageTitle" style="font-size: 6rem;">Our Team:</h1>
+            <h1 class="d-flex justify-content-center" id="PageTitle" style="font-size: 6rem;">Our Team</h1>
                 <hr class="d-flex justify-content-center" id="UnderlineTitle">
         </div>
 
