--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -84,7 +84,7 @@
     </nav>
 
     <!--Navbar-->
-    <nav class="navbar navbar-expand-md lower-navbar" style="position: relative; z-index: 1;">
+    <nav class="navbar navbar-expand-md lower-navbar" style="position: absolute; z-index: 1;">
 
         <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#basicExampleNav">
                     <span class="menu-icon-bar"></span>
