--- a/SPE-website/pages/templates/pages/finalgallery.html
+++ b/SPE-website/pages/templates/pages/finalgallery.html
@@ -638,7 +638,7 @@ video {
                 <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                     <div class="position-relative tm-thumbnail-container">
                         <img src="{% static 'pages/shadan_img/i1.png' %}" alt="Image" class="img-fluid tm-catalog-item-img">    
-                        <a href="/teacher" class="position-absolute tm-img-overlay">
+                        <a href="/induction" class="position-absolute tm-img-overlay">
                             <i class="fas fa-play tm-overlay-icon"></i>
                         </a>
                     </div>    
