Added Basant Files with images

--- a/SPE-website/pages/templates/pages/basant.html
+++ b/SPE-website/pages/templates/pages/basant.html
@@ -185,12 +185,12 @@ a.current_dot {
 
 
 {% block content %} 
-<br><br><br><br><br><br><br><br>
 <section class="intro">
     <div class="left">
       <div>
+        <br><br><br><br><br><br><br><br>
         <span class="slider_imported">SPE IIT ISM Dhanbad</span>
-        <h1>Intern Talk</h1>
+        <h1>Basant</h1>
         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eveniet amet excepturi voluptates dolorem totam ad quod hic, porro accusamus, repellat, corrupti at obcaecati ducimus, dolor quibusdam sequi nemo inventore?</p> -->
         <a href="/Gallery" >Back To Gallery</a>
       </div>
@@ -198,19 +198,19 @@ a.current_dot {
 
     <div class="slider">
       <ul>
-        <li style="background-image:url({% static 'pages/shadan_img/i1.png' %})" >
+        <li style="background-image:url({% static 'pages/shadan_img/b1.jpg' %})" >
           <div class="center-y">
             <!-- <h3>Slider Title #1</h3>
             <a href="#">View Project</a>	 -->
           </div>
         </li>
-        <li style="background-image:url({% static 'pages/shadan_img/i2.png' %})">
+        <li style="background-image:url({% static 'pages/shadan_img/b2.jpg' %})">
           <div class="center-y">
             <!-- <h3>Slider Title #2</h3>
             <a href="#">View Project</a>	 -->
           </div>
         </li>
-        <li style="background-image:url({% static 'pages/shadan_img/i3.png' %})">
+        <li style="background-image:url({% static 'pages/shadan_img/b3.jpg' %})">
           <div class="center-y">
             <!-- <h3>Slider Title #3</h3>
             <a href="#">View Project</a>	 -->
