--- a/SPE-website/pages/templates/pages/finalgallery.html
+++ b/SPE-website/pages/templates/pages/finalgallery.html
@@ -587,15 +587,15 @@ video {
         <main>
             <div class="row">
                 <div class="col-12">
-                    <h2 class="tm-page-title mb-4">Our Video Catalog</h2>
+                    <h2 class="tm-page-title mb-4">SPE IIT ISM Dhanbad</h2>
                     <div class="tm-categories-container mb-5">
                         <h3 class="tm-text-primary tm-categories-text">Categories:</h3>
                         <ul class="nav tm-category-list">
                             <li class="nav-item tm-category-item"><a href="#" class="nav-link tm-category-link active">All</a></li>
-                            <li class="nav-item tm-category-item"><a href="#" class="nav-link tm-category-link">Intern Talk</a></li>
-                            <li class="nav-item tm-category-item"><a href="#" class="nav-link tm-category-link">FIPI</a></li>
-                            <li class="nav-item tm-category-item"><a href="#" class="nav-link tm-category-link">Teacher's Day</a></li>
-                            <li class="nav-item tm-category-item"><a href="#" class="nav-link tm-category-link">Induction</a></li>
+                            <li class="nav-item tm-category-item"><a href="/intern" class="nav-link tm-category-link">Intern Talk</a></li>
+                            <li class="nav-item tm-category-item"><a href="/fipi" class="nav-link tm-category-link">FIPI</a></li>
+                            <li class="nav-item tm-category-item"><a href="/teacher" class="nav-link tm-category-link">Teacher's Day</a></li>
+                            <li class="nav-item tm-category-item"><a href="/basant" class="nav-link tm-category-link">Basant</a></li>
                         </ul>
                     </div>        
                 </div>
@@ -637,13 +637,13 @@ video {
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                     <div class="position-relative tm-thumbnail-container">
-                        <img src="{% static 'pages/shadan_img/i1.png' %}" alt="Image" class="img-fluid tm-catalog-item-img">    
-                        <a href="/induction" class="position-absolute tm-img-overlay">
+                        <img src="{% static 'pages/shadan_img/b1.jpg' %}" alt="Image" class="img-fluid tm-catalog-item-img">    
+                        <a href="/basant" class="position-absolute tm-img-overlay">
                             <i class="fas fa-play tm-overlay-icon"></i>
                         </a>
                     </div>    
                     <div class="p-4 tm-bg-gray tm-catalog-item-description">
-                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Induction</h3>                        
+                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Basant</h3>                        
                     </div>
                 </div>
                 <!-- <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
