Added Cloth Donation Link with images

--- a/SPE-website/pages/templates/pages/finalgallery.html
+++ b/SPE-website/pages/templates/pages/finalgallery.html
@@ -646,18 +646,18 @@ video {
                         <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Basant</h3>                        
                     </div>
                 </div>
-                <!-- <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
+                <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                     <div class="position-relative tm-thumbnail-container">
-                        <img src="{% static 'pages/shadan_img/t2.png' %}" alt="Image" class="img-fluid tm-catalog-item-img">    
-                        <a href="video-page.html" class="position-absolute tm-img-overlay">
+                        <img src="{% static 'pages/shadan_img/c2.jpg' %}" alt="Image" class="img-fluid tm-catalog-item-img">    
+                        <a href="/cdd" class="position-absolute tm-img-overlay">
                             <i class="fas fa-play tm-overlay-icon"></i>
                         </a>
                     </div>
                     <div class="p-4 tm-bg-gray tm-catalog-item-description">
-                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Praesent posuere rhoncus</h3>
+                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Cloth Donation Drive</h3>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
+                <!-- <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                     <div class="position-relative tm-thumbnail-container">
                         <img src="{% static 'pages/shadan_img/i2.png' %}" alt="Image" class="img-fluid tm-catalog-item-img">    
                         <a href="video-page.html" class="position-absolute tm-img-overlay">
