Added SPE E monitoring Services Link with images

--- a/SPE-website/pages/templates/pages/finalgallery.html
+++ b/SPE-website/pages/templates/pages/finalgallery.html
@@ -657,30 +657,30 @@ video {
                         <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Cloth Donation Drive</h3>
                     </div>
                 </div>
-                <!-- <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
+                <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                     <div class="position-relative tm-thumbnail-container">
-                        <img src="{% static 'pages/shadan_img/i2.png' %}" alt="Image" class="img-fluid tm-catalog-item-img">    
-                        <a href="video-page.html" class="position-absolute tm-img-overlay">
+                        <img src="{% static 'pages/shadan_img/h1.jpg' %}" alt="Image" class="img-fluid tm-catalog-item-img">    
+                        <a href="/hall" class="position-absolute tm-img-overlay">
                             <i class="fas fa-play tm-overlay-icon"></i>
                         </a>
                     </div>                            
                     <div class="p-4 tm-bg-gray tm-catalog-item-description">
-                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Turpis massa aliquam</h3>
+                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Hall n Fall</h3>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
+                 <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                     <div class="position-relative tm-thumbnail-container">
-                        <img src="img/i3.png" alt="Image" class="img-fluid tm-catalog-item-img">    
-                        <a href="video-page.html" class="position-absolute tm-img-overlay">
+                        <img src="{% static 'pages/shadan_img/m1.jpg' %}" alt="Image" class="img-fluid tm-catalog-item-img">    
+                        <a href="/m" class="position-absolute tm-img-overlay">
                             <i class="fas fa-play tm-overlay-icon"></i>
                         </a>
                     </div>    
                     <div class="p-4 tm-bg-gray tm-catalog-item-description">
-                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Class aptent taciti sociosqu</h3>
-                        <p class="tm-catalog-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus bibendum orci sit amet dignissim rhoncus. Pellentesque pretium faucibus vestibulum.</p>
+                        <h3 class="tm-text-primary mb-3 tm-catalog-item-title">SPE E-monitoring Session</h3>
+                        <!-- <p class="tm-catalog-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus bibendum orci sit amet dignissim rhoncus. Pellentesque pretium faucibus vestibulum.</p> -->
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
+                <!--<div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                     <div class="position-relative tm-thumbnail-container">
                         <img src="img/i4.png" alt="Image" class="img-fluid tm-catalog-item-img">    
                         <a href="video-page.html" class="position-absolute tm-img-overlay">
