one more correction

--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -112,7 +112,7 @@
                         <div class="flip-card-back flip-border"
                              style="background-image: url(/static/pages/office-bearers/sankhdip-sir-blur.jpg);">
                           <h1 class="card-title" style="color: white;">Sankhadip Biswas</h1>
-                          <hr class="underline" style="background-color: black;">
+                          <hr class="underline" style="background-color: white;">
                           <p class="card-content" style="color: white;">Vice President</p>
                           <a href="https://www.facebook.com/sankhadipbiswas03"><i class="fa fa-facebook"></i></a>
                           <a href="https://www.linkedin.com/in/sankhadipbiswas/"><i class="fa fa-linkedin"></i></a>
