Made some changes in the Gallery

--- a/SPE-website/pages/templates/pages/finalgallery.html
+++ b/SPE-website/pages/templates/pages/finalgallery.html
@@ -447,7 +447,7 @@ video {
     #tm-main-nav .nav-item { margin: 20px 40px; }
     /* .navbar-expand-lg .navbar-nav .nav-link { padding: 8px 0px; }
     .navbar-expand-lg .navbar-collapse { justify-content: flex-end; } */
-} */
+
 
 @media (max-width: 1419px) {
     .tm-catalog-item { margin-bottom: 30px; }
@@ -563,11 +563,11 @@ video {
         
     <div class="tm-welcome-container text-center text-white">
         <div class="tm-welcome-container-inner">
-            <p class="tm-welcome-text mb-1 text-white">Welcome to our Photo Gallery</p>
-            <p class="tm-welcome-text mb-5 text-white">SPE IIT ISM Dhanbad</p>
-            <a href="#content" class="btn tm-btn-animate tm-btn-cta tm-icon-down">
+            <p class="tm-welcome-text mb-1 text-white" style="font-size: 48px ;">Welcome to our Photo Gallery</p>
+            <p class="tm-welcome-text mb-5 text-white" style="font-size: 20px ;">SPE IIT ISM Dhanbad</p>
+            <!-- <a href="#content" class="btn tm-btn-animate tm-btn-cta tm-icon-down">
                 <span style="color: #ffffff" >Let's Go!!</span>
-            </a>
+            </a> -->
         </div>
     </div>
 
@@ -596,6 +596,9 @@ video {
                             <li class="nav-item tm-category-item"><a href="/fipi" class="nav-link tm-category-link">FIPI</a></li>
                             <li class="nav-item tm-category-item"><a href="/teacher" class="nav-link tm-category-link">Teacher's Day</a></li>
                             <li class="nav-item tm-category-item"><a href="/basant" class="nav-link tm-category-link">Basant</a></li>
+                            <li class="nav-item tm-category-item"><a href="/cdd" class="nav-link tm-category-link">Cloth Donation Drive</a></li>
+                            <li class="nav-item tm-category-item"><a href="/hall" class="nav-link tm-category-link">Hall n Fall</a></li>
+                            <li class="nav-item tm-category-item"><a href="/m" class="nav-link tm-category-link">SPE E-monitoring Session</a></li>
                         </ul>
                     </div>        
                 </div>
