--- a/SPE-website/pages/templates/pages/cdd.html
+++ b/SPE-website/pages/templates/pages/cdd.html
@@ -43,7 +43,7 @@ a {
 .left {
 	float: left;
 	height: 100%;
-	width: 60%;
+	width: 30%;
 	padding: 3rem 3rem 3rem 5rem;
 	display: table;
 }
@@ -77,7 +77,7 @@ p + a {
 .slider {
 	float: right;
 	position: relative;
-	width: 40%;
+	width: 70%;
 	height: 100%;
 }
 .slider li {
@@ -185,12 +185,12 @@ a.current_dot {
 
 
 {% block content %} 
+<br><br><br><br><br><br><br><br>
 <section class="intro">
     <div class="left">
-      <div>
-        <br><br><br><br><br><br><br><br>
+      <div>        
         <span class="slider_imported">SPE IIT ISM Dhanbad</span>
-        <h1>Cloth Donation Drive</h1>
+        <h1>Cloth <br>Donation <br>Drive</h1>
         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eveniet amet excepturi voluptates dolorem totam ad quod hic, porro accusamus, repellat, corrupti at obcaecati ducimus, dolor quibusdam sequi nemo inventore?</p> -->
         <a href="/Gallery" >Back To Gallery</a>
       </div>
