--- a/SPE-website/pages/templates/pages/intern.html
+++ b/SPE-website/pages/templates/pages/intern.html
@@ -20,7 +20,7 @@
 
 <style>
 
-/*@import url(https://fonts.googleapis.com/css?family=Playfair+Display:400,400italic);
+/* @import url(https://fonts.googleapis.com/css?family=Playfair+Display:400,400italic); */
 * {
 	box-sizing: border-box;
 	padding: 0;
@@ -29,12 +29,12 @@
 html {
 	font-size: calc(5px + 0.4vw);
 }
-body {
+/* body {
   font-family: 'Playfair Display', serif;
-}
+} */
 a {
 	text-decoration: none;
-}*/
+}
 .intro {
 	position: relative;
 	width: 100%;
@@ -43,7 +43,7 @@ a {
 .left {
 	float: left;
 	height: 100%;
-	width: 60%;
+	width: 30%;
 	padding: 3rem 3rem 3rem 5rem;
 	display: table;
 }
@@ -77,7 +77,7 @@ p + a {
 .slider {
 	float: right;
 	position: relative;
-	width: 40%;
+	width: 70%;
 	height: 100%;
 }
 .slider li {
@@ -188,9 +188,9 @@ a.current_dot {
 <br><br><br><br><br><br><br><br>
 <section class="intro">
     <div class="left">
-      <div>
-        <span class="slider_imported">SPE IIT ISM Dhanbad</span>
-        <h1>Intern Talk</h1>
+      <div >
+        <span class="slider_imported" >SPE IIT ISM Dhanbad</span>
+        <h1 >Intern Talk</h1>
         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eveniet amet excepturi voluptates dolorem totam ad quod hic, porro accusamus, repellat, corrupti at obcaecati ducimus, dolor quibusdam sequi nemo inventore?</p> -->
         <a href="/Gallery" >Back To Gallery</a>
       </div>
