--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -401,7 +401,7 @@
 <!-- Hero Header -->
 <div class="page-header" data-parallax="true" style="background-image: url(/media/bg-images/premium4.jpeg); height: 570px;">
     <div class="container" style="text-align:center; overflow: hidden;">
-        <p class="text"> <span class="text__first"><span class="text__word" style="font-size: 4rem;">WELCOME TO</span><span class="text__first-bg"></span></span><br/><span class="text__second"><span class="text__word">SPE IIT (ISM) DHANBAD STUDENT CHAPTER</span>
+        <p class="text"> <span class="text__first"><span class="text__word" style="font-size: 4rem;">WELCOME TO</span><span class="text__first-bg"></span></span><br/><span class="text__second"><span class="text__word">SPE IIT (ISM) DHANBAD CHAPTER</span>
             <span class="text__second-bg"></span>
             </span>
         </p>
