--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -251,7 +251,7 @@
                              style="background-image: url(/static/pages/developer-img/rajwardhan-sir-blur.jpg);">
                           <h1 class="card-title" style="color: white;">Rajvardhan Rawat</h1>
                           <hr class="underline" style="background-color: white;">
-                          <p class="card-content" style="color: white;"></p>
+                          <p class="card-content" style="color: white;">Team Leader</p>
                           <a href="https://www.linkedin.com/in/rajvardhanrawat/"><i class="fa fa-linkedin"></i></a>
                           <a href="#"><i class="fa fa-facebook"></i></a>
                         </div>
@@ -269,7 +269,7 @@
                              style="background-image: url(/static/pages/developer-img/raj-sir-blur.jpg);">
                           <h1 class="card-title" style="color: black;">Raj Kumar Singh</h1>
                           <hr class="underline" style="background-color: black;">
-                          <p class="card-content" style="color: white;"></p>
+                          <p class="card-content" style="color: white;">Team Leader</p>
                           <a href="#"><i class="fa fa-facebook"></i></a>
                           <a href="https://www.linkedin.com/in/raj-kumar-singh-272a8b179">
                               <i class="fa fa-linkedin"></i></a>
