--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -436,7 +436,7 @@
                                 <p> <b>
                                  <br> <a href="#">1. WELCOME TO THE OFFICIAL WEBSITE OF SPE IIT ISM STUDENT CHAPTER!</a><br><br>
                                  <br> <a href="#">2. We SPE IIT ISM Student Chapter give our heartiest welcome to the Freshers.
-                                    With this we announce our Inductions for SPE and FIFI for batch 2020 is going to be held very soon.</a><br><br>
+                                    With this we announce our Inductions for SPE and FIPI for batch 2020 is going to be held very soon.</a><br><br>
                                     </b></p>
                             </marquee>
                             <br>
