--- a/SPE-website/pages/templates/pages/gallery.html
+++ b/SPE-website/pages/templates/pages/gallery.html
@@ -14,7 +14,7 @@
             <ul class="city-info">
                 <li class="one">Induction</li>
                 <li class="two">SPE</li>
-                <li class="three">FIPI</li>
+                <li class="three">FIPI inductions</li>
             </ul>
         </div>
         <div class="btn-close"></div>
