--- a/SPE-website/pages/templates/pages/hall.html
+++ b/SPE-website/pages/templates/pages/hall.html
@@ -189,8 +189,8 @@ a.current_dot {
 <section class="intro">
     <div class="left">
       <div>
-        <span class="slider_imported">SPE IIT ISM Dhanbad</span>
-        <h1>Hall n Fall</h1>
+        <span class="slider_imported">SPE IIT (ISM) Dhanbad</span>
+        <h1>Haul n Fall</h1>
         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eveniet amet excepturi voluptates dolorem totam ad quod hic, porro accusamus, repellat, corrupti at obcaecati ducimus, dolor quibusdam sequi nemo inventore?</p> -->
         <a href="/Gallery" >Back To Gallery</a>
       </div>
